
2011-XX-XX  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/gdbdlvhex.sh: Shellscript to use gdb with libtool-built uninstalled binary.
	* TODO more details [rewrote model building according to [todo] paper: new dependency notion, evalgraph, evaluation heuristics, ...]
	* removed ruleml output builder as it most probably does not work correctly and could/should be done as a plugin
	* removed --reverse option as it was not implemented and not documented
	* removed --dlt option as it should be done as a plugin
	* renaming globals to config and removing singleton status (each ProgramCtx may have its own config if dlvhex is used as a library)
	* encapsulating input sources in InputProvider
	* removing singleton status of PluginContainer as API users might have different programs with different plugin containers
	* Logger component with log-levels, hierarchical indentation and NDEBUG-dependant logging
	* Printhelpers.hpp utilities for comfortable printing of various boost and STL containers
	* removed dependency on cppunit, now using the boost UTF
	* no longer enforcing dlv to be present as backend, it is now sufficient that one of the possible backends is present
	* evaluation heuristics selectable with --heuristics=...
	* state machine now features states that may be implicitly skipped (= optional states)

2010-12-31  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ProgramCtx.h: substitute edb and idb by edbList and idbList
	* src/dlvhex/HexParser.cpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.
	* testsuite/TestHexParserModule.cpp: Likewise.

	* testsuite/Makefile.am: remove declaration of ModuleHeaderTable (old version)
	* include/dlvhex/ProgramCtx.h: Likewise.

	* src/dlvhex/ID.cpp: fixing how term predicate is printed

	* include/dlvhex/ModuleTable.hpp: new way of module syntax checking using new version of module table
	* include/dlvhex/ProgramCtx.h: Likewise.