@@ -191,6 +191,11 @@ namespace
     ID id = registry->terms.getIDByString(s);
     if( id == ID_FAIL )
     {
+      id = registry->preds.getIDByString(s);
+    }
+ 
+    if( id == ID_FAIL )
+    {
       Term term(ID::MAINKIND_TERM, s);
       // we can only get strings or constants
       assert(s[0] == '"' || islower(s[0]));
